--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,34 @@
     cursor: pointer;
   }
 
+  a.button {
+    display: inline-block;
+    padding: 0.46em 1.6em;
+    border: 0.1em solid #000000;
+    margin: 0 0.2em 0.2em 0;
+    border-radius: 0.2em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #000000;
+    background-color: #f0ebd3;
+    text-align: center;
+    transition: all 0.15s;
+  }
+
+  a.button:hover {
+    text-shadow: 0 0 2em rgba(239, 239, 239, 1);
+    background-color: #f0e5af;
+  }
+
+  @media all and (max-width:30em) {
+    a.button {
+      display: block;
+      margin: 0.4em auto;
+    }
+  }
+
   .dropdown {
     position: relative;
     display: inline-block;
@@ -32,7 +60,7 @@
     padding: 10px;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
   }
 
@@ -43,7 +71,9 @@
     display: block;
   }
 
-  .dropdown-content a:hover {background-color: #f1f1f1;}
+  .dropdown-content a:hover {
+    background-color: #f1f1f1;
+  }
 
   .arrow {
     width: 6px;
@@ -77,9 +107,9 @@
   }
 
   .hist-overview i, span {
-      padding: 3px;
+    padding: 3px;
   }
 
   .hist-overview {
-      width: 250px;
+    width: 250px;
   }
