--- a/public/css/card-animations.css
+++ b/public/css/card-animations.css
@@ -15,6 +15,11 @@
     animation: rotate-out-2-cw 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
+.slide-in-top {
+    -webkit-animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
 /**
  * ----------------------------------------
  * animation flip-in-hor-top
@@ -76,5 +81,37 @@
         -webkit-transform: rotate(45deg);
         transform: rotate(45deg);
         opacity: 0;
+    }
+}
+
+/**
+ * ----------------------------------------
+ * animation slide-in-top
+ * ----------------------------------------
+ */
+
+@-webkit-keyframes slide-in-top {
+    0% {
+        -webkit-transform: translateY(-1000px);
+        transform: translateY(-1000px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 0.3;
+    }
+}
+
+@keyframes slide-in-top {
+    0% {
+        -webkit-transform: translateY(-1000px);
+        transform: translateY(-1000px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 0.3;
     }
 }
