--- a/public/css/basic-card.css
+++ b/public/css/basic-card.css
@@ -21,7 +21,7 @@
 
 .card__caption {
   background-color: rgba(255, 255, 255, 0.65);
-  padding: 0.75em;
+  padding: 0.75em 0.25em;
   position: relative;
   border-radius: 0 0 3px 3px;
 }
