--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,23 +8,22 @@
 
   a.button {
     display: inline-block;
-    padding: 0.46em 1.6em;
-    /* border: 0.1em solid #000000; */
+    padding: 0.46em 1em;
+    border: 1px solid #7996D2;
     margin: 0.3em;
-    /* border-radius: 1em; */
+    color: #000000;
+    border-radius: 3px;
     box-sizing: border-box;
     text-decoration: none;
     font-weight: 300;
-    color: #000000;
-    background-color: #f0ebd3;
+    background-color: #E1F0FF;
     text-align: center;
     transition: all 0.15s;
     cursor: pointer;
   }
 
   a.button:hover {
-    text-shadow: 0 0 2em rgba(239, 239, 239, 1);
-    background-color: #f0e5af;
+    background-color: #7996D2;
   }
 
   @media all and (max-width:30em) {
