--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -21,7 +21,7 @@ ul {
   border-bottom-left-radius: 6px;
   border-bottom-right-radius: 6px;
   margin: 10px;
-  background-color: #4A659E;
+  background-color: #F1BF53;
 }
 
 .menu {
