--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -21,6 +21,7 @@ ul {
   border-bottom-left-radius: 6px;
   border-bottom-right-radius: 6px;
   margin: 10px;
+  margin-top: 0;
   background-color: #F1BF53;
 }
 
