--- a/public/css/main.css
+++ b/public/css/main.css
@@ -111,5 +111,21 @@
   }
 
   .hist-overview {
-    width: 250px;
+    width: 300px;
+  }
+
+  .players-stats {
+    display: grid;
+    grid-template-columns: max-content 1fr;
+    background-color: #F1BF53;
+    grid-gap: 2px;
+    padding: 2px;
+    border-radius: 4px;
+    height: fit-content;
+  }
+
+  .players-stats .column {
+    background-color: rgba(255, 255, 255, 0.65);
+    padding: 0.4em;
+    border-radius: 2px;
   }
