feat: player stats - predefined width for counts

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -111,7 +111,8 @@
   }
 
   .row-data {
-    width: 300px;
+    display: grid;
+    grid-template-columns: repeat(3, 50px) 200px;
   }
 
   .players-stats {
