--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,13 @@
+  .title {
+    font-family: 'riffic-bold', sans-serif;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 2.5em;
+    letter-spacing: 0.1em;
+    margin: 0.3em;
+    color: rgb(155, 127, 91);
+  }
+
   .btn {
     width: 150px;
     padding: 10px 20px;
