--- a/public/css/main.css
+++ b/public/css/main.css
@@ -162,10 +162,14 @@
     -ms-transform: "translate(-50%,-50%)";
   }
 
-  .icon-button {
+  .icon-button-wrapper {
     text-align: right;
-    width: 100%;
+    color: #F1BF53;
+  }
+
+  .fa-times-circle:hover {
     color: rgb(155, 127, 91);
+    cursor: pointer;
   }
 
   .history-grid {
