--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -32,7 +32,7 @@
 .drop-zone {
     position: relative;
     width: 20px;
-    height: 80px;
+    height: 85px;
     top: 10px;
     border-radius: 10px;
 }
@@ -46,7 +46,8 @@
 }
 
 .drop-zone.highlight {
-    border: 2px solid crimson;
+    width: 25px;
+    background-color: rgb(107, 12, 31);
 }
 
 @keyframes highlight-drop-zones {
