feat: remove shadow when card can be dropped

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -251,6 +251,7 @@
     margin-left: .5em;
   }
 
-  .draggable.can-drop .card--normal {
+  .draggable.can-drop .card--normal:hover {
     background: linear-gradient(110deg, yellowgreen 0%, green 100%);
+    box-shadow: none;
   }
