feat: player's stats - highlight current player

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -128,6 +128,16 @@
     align-items: center;
   }
 
+  .grid {
+    display: grid;
+  }
+
+  .grid .center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .players-stats {
     display: grid;
     grid-template-columns: max-content 1fr;
