feat: add status-bar with round number and game status (text)

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -41,6 +41,11 @@ header {
   justify-content: center;
 }
 
+.status-bar {
+  display: flex;
+  justify-content: center;
+}
+
 .timeline {
   padding-top: 100px;
 }
