feat: align timeline on center
Centering must be removed, when scroll becomes available.

--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -25,6 +25,9 @@
 
 .timeline .scroll-item:last-child {
     margin-right: 30px;
+}
+
+.timeline .scrollable .scroll-item:last-child {
     width: 250px;
 }
 
