feat: allow new-game on player's turn or after game ends
Player's turn = only during ready phase

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,6 +39,16 @@
     cursor: pointer;
   }
 
+  .button.disabled {
+    user-select: none;
+    cursor: not-allowed;
+    background-color: #FFF3D9;
+  }
+
+  .button.disabled:hover {
+    background-color: #FFF3D9;
+  }
+
   .button:hover {
     background-color: #EACB89;
   }
