--- a/public/css/card.css
+++ b/public/css/card.css
@@ -1,12 +1,11 @@
-  @import url("https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300,700");
-
   .parent {
-    float: left;
-    margin: 5px;
     position: relative;
-    width: 120px;
     top: 0;
     left: 0;
+    float: left;
+    margin: 5px;
+    width: 120px;
+    height: 198px;
     transition: all .2s ease-in-out;
   }
 
@@ -18,19 +17,14 @@
 
   .border {
     position: absolute;
-    top: 0;
-    left: 0;
-    /* border: 1px green solid; */
     width: 120px;
     height: 198px;
     z-index: 1;
-    /* margin-bottom: 1px; */
-    /* box-shadow: 0px 5px 20px -10px #3A1C71; */
   }
 
   .image {
     position: relative;
-    height: 154px;
+    height: 152px;
     display: block;
   }
 
@@ -39,12 +33,12 @@
     justify-content: center;
     align-items: center;
     background: linear-gradient(110deg, rgb(240, 235, 211) 0%, rgb(240, 229, 175) 100%);
-    margin: 0;
-    height: 44.24px;
+    height: 44px;
   }
 
   .card-title {
-    font-family: "Open Sans", Helvetica, sans-serif;
+    /* font-family: "Open Sans", Helvetica, sans-serif; */
+    font-family: "Open Sans Condensed", "Open Sans", helvetica, sans-serif;
     margin: 0;
     padding: 0 5px 0 5px;
     font-weight: bold;
@@ -53,5 +47,16 @@
   }
 
   .card-border-clip {
+    position: relative;
+    left: 2px;
+    top: 2px;
+    width: 116px;
+    height: 194px;
     clip-path: url("#card-border-clip");
+  }
+
+  #card-back path {
+    fill: #F1BF53;
+    stroke: #F1BF53;
+    stroke-width: 1;
   }
