--- a/public/css/card.css
+++ b/public/css/card.css
@@ -4,27 +4,26 @@
     left: 0;
     float: left;
     margin: 5px;
-    width: 120px;
-    height: 198px;
+    width: 140px;
+    height: 231px;
     transition: all .2s ease-in-out;
   }
 
-  /* .parent:hover { 
+  .parent.selectable:hover {
     z-index: 5;
-    box-shadow: 0px 13px 30px -15px #000000;
-    transform:translateY(-10px);
-  } */
+    transform: translateY(-10px);
+  }
 
   .border {
     position: absolute;
-    width: 120px;
-    height: 198px;
+    width: 140px;
+    height: 231px;
     z-index: 1;
   }
 
   .image {
     position: relative;
-    height: 152px;
+    height: 177px;
     display: block;
   }
 
@@ -32,17 +31,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(110deg, rgb(240, 235, 211) 0%, rgb(240, 229, 175) 100%);
-    height: 44px;
+    background: linear-gradient(110deg, rgb(240, 229, 175) 0%, #fae9c3 100%);
+    height: 50px;
   }
 
   .card-title {
-    /* font-family: "Open Sans", Helvetica, sans-serif; */
-    font-family: "Open Sans Condensed", "Open Sans", helvetica, sans-serif;
-    margin: 0;
+    font-family: "Open Sans", Helvetica, sans-serif;
     padding: 0 5px 0 5px;
     font-weight: bold;
-    font-size: 11px;
+    font-size: 0.8em;
     letter-spacing: 0.02em;
   }
 
@@ -50,8 +47,8 @@
     position: relative;
     left: 2px;
     top: 2px;
-    width: 116px;
-    height: 194px;
+    width: 136px;
+    height: 227px;
     clip-path: url("#card-border-clip");
   }
 
