--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -1,10 +1,10 @@
 /* Horizontal scroll */
 .scrolling-wrapper {
     display: flex;
+    align-items: center;
     flex-wrap: nowrap;
     overflow-x: auto;
     width: 100%;
-    height: 150px;
     padding-top: 50px;
     -webkit-overflow-scrolling: touch;
 }
@@ -36,7 +36,6 @@
     position: relative;
     width: 20px;
     height: 85px;
-    top: 10px;
     border-radius: 10px;
 }
 
