--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -67,8 +67,10 @@
 .ribbon {
     position: absolute;
     top: 25px;
-    left: -180px;
-    width: 200px;
+    /* left: -180px;
+    width: 200px; */
+    left: -160px;
+    width: 180px;
     height: 30px;
     background: crimson;
     z-index: -1;
