--- a/public/css/card.css
+++ b/public/css/card.css
@@ -4,8 +4,8 @@
     left: 0;
     float: left;
     margin: 10px;
-    width: 140px;
-    height: 231px;
+    width: 160px;
+    height: 264px;
     transition: 0.4s;
   }
 
@@ -23,7 +23,7 @@
 
   .image {
     position: relative;
-    height: 177px;
+    height: 77%;
     width: inherit;
     display: block;
   }
@@ -33,7 +33,7 @@
     justify-content: center;
     align-items: center;
     background: linear-gradient(110deg, rgb(240, 229, 175) 0%, #fae9c3 100%);
-    height: 50px;
+    height: 23%;
   }
 
   .card-title {
@@ -48,8 +48,10 @@
     position: relative;
     left: 2px;
     top: 2px;
-    width: 136px;
-    height: 227px;
+    /* width: 136px;
+    height: 227px; */
+    width: 158px;
+    height: 262px;
     clip-path: url("#card-border-clip");
   }
 
