--- a/public/css/main.css
+++ b/public/css/main.css
@@ -153,7 +153,7 @@
     height: fit-content;
   }
 
-  .players-stats .column {
+  .players-stats .grid-cell {
     background-color: rgba(255, 255, 255, 0.65);
     padding: 0.4em;
     border-radius: 2px;
