--- a/public/css/basic-card.css
+++ b/public/css/basic-card.css
@@ -14,6 +14,10 @@
   transition: 0.4s;
 }
 
+.timeline .card {
+  margin: 10px 0;
+}
+
 .card__caption {
   background-color: rgba(255, 255, 255, 0.65);
   padding: 0.75em 0.25em;
