--- a/public/css/card.css
+++ b/public/css/card.css
@@ -30,17 +30,26 @@
   .content {
     display: flex;
     justify-content: center;
-    align-items: center;
+
     background: linear-gradient(110deg, rgb(240, 229, 175) 0%, #fae9c3 100%);
-    height: 23%;
+    height: 22%;
   }
 
   .card-title {
     font-family: "Open Sans", Helvetica, sans-serif;
     font-weight: bold;
-    font-size: 0.8em;
+    font-size: 0.9em;
     letter-spacing: 0.02em;
     padding: 0 5px 0 5px;
+  }
+
+  .card-back .content {
+    align-items: center;
+  }
+
+  .card-front .card-title {
+    position: relative;
+    top: 10px;
   }
 
   .card-border-clip {
@@ -73,10 +82,11 @@
   }
 
   .scroll-text {
+    /* user-select: none; */
     visibility: visible;
     font-size: 0.7em;
     font-weight: bold;
-    top: -0.3em;
+    top: -0.45em;
   }
 
   .timeline .parent {
