--- a/public/css/card.css
+++ b/public/css/card.css
@@ -30,8 +30,7 @@
   .content {
     display: flex;
     justify-content: center;
-
-    background: linear-gradient(110deg, rgb(240, 229, 175) 0%, #fae9c3 100%);
+    background: linear-gradient(110deg, #faeed4 30%, #fde2a9 100%);
     height: 22%;
   }
 
