feat: use fontAwesome offline
https://fontawesome.com/how-to-use/on-the-web/setup/hosting-font-awesome-yourself

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -262,7 +262,7 @@
 
   .ui.table>thead th:after {
     display: none;
-    font-family: FontAwesome;
+    font-family: 'Font Awesome 5 Free';
     margin-left: .5em;
   }
 
