--- a/public/css/card.css
+++ b/public/css/card.css
@@ -1,93 +1,107 @@
-  .parent {
-    position: relative;
-    top: 0;
-    left: 0;
-    float: left;
-    margin: 10px;
-    transition: 0.4s;
-  }
+.hand {
+  /* bottom: 0;
+  top: 0; */
+  bottom: 30;
+  right: 0;
+  left: 0;
+  display: flex;
+  /* height: 100%; */
+  padding: 0 50px;
+  justify-content: center;
+  align-items: flex-end;
+  /* position: fixed; */
+}
 
-  .parent.selectable:hover {
+.parent {
+  position: relative;
+  top: 0;
+  left: 0;
+  float: left;
+  /* margin: 10px;
+  transition: 0.4s; */
+}
+
+/* .parent.selectable:hover {
     z-index: 5;
     transform: translateY(-10px);
-  }
+  } */
 
-  .card-border,
-  .scroll-text {
-    position: absolute;
-    width: inherit;
-    height: inherit;
-    z-index: 1;
-  }
+.card-border,
+.scroll-text {
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  z-index: 1;
+}
 
-  .image {
-    position: relative;
-    height: 77%;
-    width: inherit;
-    display: block;
-  }
+.image {
+  position: relative;
+  height: 77%;
+  width: inherit;
+  display: block;
+}
 
-  .content {
-    display: flex;
-    justify-content: center;
-    background: linear-gradient(110deg, #faeed4 30%, #fde2a9 100%);
-    height: 22%;
-  }
+.content {
+  display: flex;
+  justify-content: center;
+  background: linear-gradient(110deg, #faeed4 30%, #fde2a9 100%);
+  height: 22%;
+}
 
-  .card-title {
-    font-family: "Open Sans", Helvetica, sans-serif;
-    font-weight: bold;
-    font-size: 0.9em;
-    letter-spacing: 0.02em;
-    padding: 0 5px 0 5px;
-  }
+.card-title {
+  font-family: "Open Sans", Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 0.9em;
+  letter-spacing: 0.02em;
+  padding: 0 5px 0 5px;
+}
 
-  .card-back .content {
-    align-items: center;
-  }
+.card-back .content {
+  align-items: center;
+}
 
-  .card-front .card-title {
-    position: relative;
-    top: 10px;
-  }
+.card-front .card-title {
+  position: relative;
+  top: 10px;
+}
 
-  .card-border-clip {
-    position: relative;
-    clip-path: url("#card-border-clip");
-  }
+.card-border-clip {
+  position: relative;
+  clip-path: url("#card-border-clip");
+}
 
-  .card-front {
-    --primary-color: white;
-  }
+.card-front {
+  --primary-color: white;
+}
 
-  #card-back path,
-  #card-front path {
-    fill: inherit;
-    stroke: inherit;
-  }
+#card-back path,
+#card-front path {
+  fill: inherit;
+  stroke: inherit;
+}
 
-  .card-border use {
-    fill: #F1BF53;
-    stroke: #F1BF53;
-  }
+.card-border use {
+  fill: #F1BF53;
+  stroke: #F1BF53;
+}
 
-  .draggable.can-drop use {
-    fill: limegreen;
-    stroke: limegreen;
-  }
+.draggable.can-drop use {
+  fill: limegreen;
+  stroke: limegreen;
+}
 
-  .draggable.can-drop .content {
-    background: linear-gradient(110deg, rgb(201, 224, 155) 0%, rgb(84, 209, 84) 100%);
-  }
+.draggable.can-drop .content {
+  background: linear-gradient(110deg, rgb(201, 224, 155) 0%, rgb(84, 209, 84) 100%);
+}
 
-  .scroll-text {
-    user-select: none;
-    visibility: visible;
-    font-size: 0.7em;
-    font-weight: bold;
-    top: -0.45em;
-  }
+.scroll-text {
+  user-select: none;
+  visibility: visible;
+  font-size: 0.7em;
+  font-weight: bold;
+  top: -0.45em;
+}
 
-  .timeline .parent {
-    margin: 10px 0;
-  }
+.timeline .parent {
+  margin: 10px 0;
+}
